--- a/pawan.html
+++ b/pawan.html
@@ -1,16 +1,16 @@
-<button>
-  click
-</button>
-<button>
-  pawan
-</button>
-<button>
-  mental health awareness
-</button>
-<p>
-  hello,world!
-</p>
-<p>
-  i went to gym today
-</p>
-<a href="https://www.youtube.com/watch?v=BBJa32lCaaY" target=""\>link to youtube</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>click for surprise</title>
+    <script>
+        function redirectToVideo() {
+            window.location.href = 'https://www.youtube.com/watch?v=BBJa32lCaaY';
+        }
+    </script>
+</head>
+<body>
+    <button onclick="redirectToVideo()">Go to YouTube Video</button>
+</body>
+</html>
